--- a/shippable.yml
+++ b/shippable.yml
@@ -3,32 +3,34 @@ language: node_js
 
 # version numbers, testing against one version of node
 node_js:
-    - 0.10.33
+    - 0.12
 
+env:
+    - XUNIT_FILE=../shippable/testresults/result.xml API_PORT=3001
 
 build:
+   pre_ci: 
+       - cd micro-api && docker build -t sumingfei/micro-api .
+   pre_ci_boot:
+        image_name: sumingfei/micro-api
+        image_tag: latest
+        pull: false
+
    ci:
+       - mkdir -p ../shippable/testresults
+       - mkdir -p ../shippable/codecoverage       
+       - cd micro-api
+       - npm install 
        - grunt
    on_success:
-       - cd micro-www && docker build -t manishas/micro-www .
        - cd ..
-       - cd micro-api && docker build -t manishas/micro-api .
-       - docker tag -f manishas/micro-www:latest manishas/micro-www:tip 
-       - docker tag -f manishas/micro-api:latest manishas/micro-api:tip
-       - docker push manishas/micro-api:tip
-       - docker push manishas/micro-www:tip
+       - cd micro-www && docker build -t sumingfei/micro-www .
+       - docker tag -f sumingfei/micro-www:latest sumingfei/micro-www:$BRANCH.$BUILD_NUMBER 
+       - docker tag -f sumingfei/micro-api:latest sumingfei/micro-api:$BRANCH.$BUILD_NUMBER
+       - docker push sumingfei/micro-api:$BRANCH.$BUILD_NUMBER
+       - docker push sumingfei/micro-www:$BRANCH.$BUILD_NUMBER
 
 integrations:
-    notifications:
-        - integrationName: www_notif
-          type: slack
-          recipients:
-              - www-notifications
-          on_success: always
-          on_failure: always
-
     hub:
-        - integrationName: manishasDockerHub
+        - integrationName: sumingfeiDockerHub
           type: docker
-
-
