--- a/shippable.yml
+++ b/shippable.yml
@@ -32,5 +32,5 @@ build:
 
 integrations:
     hub:
-        - integrationName: sumingfeiDockerHub
+        - integrationName: sumingfei-docker
           type: docker
